# apiwp-evolution

./: .env.example  main.py  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py  evolution_client.py  main.py  schemas.py  webhook_inbox.py
static/: app.js  index.html  styles.css
